# TestTaskBMW

./: .env.dist  .gitignore  LICENSE  README  README.md  logging.json  main.py  pyproject.toml
configs/: questions.json
src/: chatgpt.py  convert.py  models.py  pipeline.py  saving.py  transcribing.py
src/config/: __init__.py  config_parser.py  questions.json
src/services/: chatgpt.py  saving.py  transcribing.py
